--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ body{
 
 h2,h3,h4{
     color: #d4d8dd;
-    text-shadow: 1px 1px 2px black 
+    text-shadow: 1px 1px 2px black;
     font-family: 'Nunito Sans', sans-serif;
 }
 
 p,li{
-    color: white
+    color: white;
     font-family: 'Nunito Sans', sans-serif;
 }
 
